# CamCal

./: .gitignore  BaslerSpecs.txt  README.md  calibrate.py  cam_offset.py  camcal_env.yaml  charuco_parameters.txt  config.yaml  config_cal_cht.yaml  cv2_cal_cht.py  cv2_imp.py  data_collection.py  processing.py  pyproject.toml  sandbox_camera.py
configs/: 2025_11_11_cal_chat.yaml  2025_11_14_cal_cht.yaml  2025_11_18_cal_cht.yaml  calibration.yaml  collection_001_calib_VC.yaml  config.yaml  cv2_st_cal_cht.yaml
data/: offset_results.json
data/vicon_data/: vicon_data.csv
src/: calc_and_verify_offset.py  calib_VC.py  calibrate.py  cam_offset.py  cam_offset_v2.py  check_offset_rosbag_v2.py  cv2_cal_cht.py  cv2_imp.py  process_truth_rosbag_and_refine_VC.py  run_megapose_on_trajectory_pack_VC.py  settings.py
src/legacy/: check_offset_rosbag.py  check_offset_rosbag_v2.py  check_offset_v2.py
src/lightweight/: check_offset.py
src/mesh_keypoints/soho/: rendered_keypoints.json  rendered_keypoints.npy
src/mesh_keypoints/soho_centered/: rendered_keypoints.json  rendered_keypoints.npy
src/offset_utils/: __init__.py  camera_io.py  metrics_and_pack.py  pose_ops.py  reprojection.py
src/trajectories/: traj_gen_circle.py  traj_gen_line.py
utils/: data_collection.py  detect_origin.py  gen_charuco.py  single_capture.py
